<?xml version="1.0"?>
<package format="2">
  <name>pcd_to_img</name>
  <version>0.0.0</version>
  <description>The pcd_to_img package</description>

  <maintainer email="bulsajyo@kaist.ac.kr">syoh</maintainer>
  <license>KAIST</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen_catkin</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
</package>
